# dds_interface

./: .gitignore  CMakeLists.txt  DDSPublisher.cpp  DDSPublisher.h  README.md  build.bat
cmake/: create_dds_enabled_project.cmake  dds_interface_integration.cmake  dependency_downloader.cmake  download_rti_deps.cmake  linux.cmake  platform_tools.cmake  windows.cmake
cmake/templates/: new_project.cpp.in  new_project_CMakeList.txt.in  new_project_build.bat.in  new_project_build.sh.in  new_project_example_message.xml.in  new_project_setup.bat.in  new_project_setup.sh.in
examples/dynamic_types/: CMakeLists.txt  USER_QOS_PROFILES.xml  build_example.bat  load_dynamic_type.cpp  load_dynamic_type.hpp  message.xml
include/: DDSInterface.h
new_project/: CMakeLists.txt  load_dynamic_type.cpp  load_dynamic_type.hpp
new_project/cmake/: linux.cmake  platform_tools.cmake
scripts/: build_static_lib.bat  create_dds_project.bat  create_project_with_dds.bat  create_project_with_dds.sh
scripts/myproj/: CMakeLists.txt  example_message.xml  myproj.cpp
scripts/myproj/cmake/: dependency_downloader.cmake  linux.cmake  windows.cmake
scripts/test_project/: CMakeLists.txt  build.bat  test_project.cpp
scripts/test_project/cmake/: create_dds_enabled_project.cmake  dds_interface_integration.cmake
scripts/tmp/myproj/: CMakeLists.txt  build.bat  myproj.cpp
scripts/tmp/myproj/cmake/: create_dds_enabled_project.cmake
scripts/tmp/myproj1/: CMakeLists.txt  build.bat  myproj1.cpp
scripts/tmp/myproj1/cmake/: create_dds_enabled_project.cmake
scripts/tmp/myproj3/: CMakeLists.txt  build.bat  myproj3.cpp
scripts/tmp/myproj3/cmake/: create_dds_enabled_project.cmake  dependency_downloader.cmake
scripts/tmp/myproj4/: CMakeLists.txt  build.bat  myproj4.cpp
scripts/tmp/myproj4/cmake/: create_dds_enabled_project.cmake
scripts/tmp/myproj5/: CMakeLists.txt  build.bat  myproj5.cpp  myproj5.hpp
scripts/tmp/myproj5/cmake/: create_dds_enabled_project.cmake
test_download/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  TestModule.cmake  TestModule.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  googletest.vcxproj  googletest.vcxproj.filters  headers.vcxproj  headers.vcxproj.filters  test.sln
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
wrapper_lib/: CMakeLists.txt  DDSInterface.cpp  DDSInterface.h  DDSMessage.cpp  DDSMessage.h  DDSPublisher.cpp  DDSPublisher.h  DDSUtils.cpp  DDSUtils.h  build.bat  build.sh  setup.bat  setup.sh  test_message.xml  test_wrapper_library.cpp
x64Linux4gcc7.3.0/include/: DDSInterface.h
x64Linux4gcc7.3.0/include/ndds/: ndds_c.h  ndds_config_c.h  ndds_config_cpp.h  ndds_cpp.h  ndds_discovery_c.h  ndds_discovery_cpp.h  ndds_flat_data_cpp.h  ndds_namespace_cpp.h  ndds_requestreply_cpp.h  ndds_transport_c.h  ndds_transport_cpp.h  ndds_transport_tcp.h  ndds_utility_c.h  ndds_utility_cpp.h  ndds_version.h  ndds_writerhistory_c.h  ndds_writerhistory_cpp.h
x64Linux4gcc7.3.0/include/ndds/advlog/: advlog_context.h  advlog_dll.h  advlog_log.h  advlog_logger.h
x64Linux4gcc7.3.0/include/ndds/cdr/: cdr_dll.h  cdr_encapsulation.h  cdr_encapsulation_impl.h  cdr_log.h  cdr_md5.h  cdr_stream.h  cdr_stream_impl.h  cdr_type.h  cdr_typeCode.h  cdr_typeObject.h  cdr_type_impl.h
x64Linux4gcc7.3.0/include/ndds/clock/: clock_dll.h  clock_highResolution.h  clock_infrastructure.h  clock_interface.h  clock_log.h  clock_monotonic.h  clock_system.h
x64Linux4gcc7.3.0/include/persistence/: persistence_buildid.h  persistence_dll.h  persistence_service.h  persistence_version.h
x64Linux4gcc7.3.0/include/recordingservice/: recordingservice_dll.h  recordingservice_storagereader.h  recordingservice_storagewriter.h
x64Linux4gcc7.3.0/include/routingservice/: routingservice_adapter.h  routingservice_adapter_new.h  routingservice_dll.h  routingservice_infrastructure.h  routingservice_log.h  routingservice_processor.h  routingservice_processor_impl.h  routingservice_service.h  routingservice_transformation.h
x64Linux4gcc7.3.0/include/rti_dl/: rti_dl_buildid_c.h  rti_dl_buildid_cpp.h  rti_dl_c.h  rti_dl_c_impl.h  rti_dl_cpp.h  rti_dl_dll_c.h  rti_dl_dll_cpp.h  rti_dl_version_c.h  rti_dl_version_cpp.h  rti_dl_xml_c.h
x64Win64VS2017/include/: DDSPublisher.h  DDSUtils.h
x64Win64VS2017/include/apputils/: apputils_argparser.h  apputils_data_vector.h  apputils_data_vector_impl.h  apputils_dll.h  apputils_dynamic_array.h  apputils_dynamic_array_impl.h  apputils_dynamic_data_converter.h  apputils_dynamic_data_converter_impl.h  apputils_log.h  apputils_monitoring.h  apputils_resource_identifier.h  apputils_resource_identifier_impl.h  apputils_string_buffer.h  apputils_string_buffer_impl.h
x64Win64VS2017/include/ndds/: ndds_c.h  ndds_config_c.h  ndds_config_cpp.h  ndds_cpp.h  ndds_discovery_c.h  ndds_discovery_cpp.h  ndds_flat_data_cpp.h  ndds_namespace_cpp.h  ndds_requestreply_cpp.h  ndds_transport_c.h  ndds_transport_cpp.h  ndds_transport_tcp.h  ndds_utility_c.h  ndds_utility_cpp.h  ndds_version.h  ndds_writerhistory_c.h  ndds_writerhistory_cpp.h
x64Win64VS2017/include/persistence/: persistence_buildid.h  persistence_dll.h  persistence_service.h  persistence_version.h
x64Win64VS2017/include/recordingservice/: recordingservice_dll.h  recordingservice_storagereader.h  recordingservice_storagewriter.h
x64Win64VS2017/include/routingservice/: routingservice_adapter.h  routingservice_adapter_library.h  routingservice_adapter_new.h  routingservice_buildid.h  routingservice_dll.h  routingservice_infrastructure.h  routingservice_infrastructure_impl.h  routingservice_log.h  routingservice_processor.h  routingservice_processor_impl.h  routingservice_service.h  routingservice_service_impl.h  routingservice_transformation.h
x64Win64VS2017/include/rti_dl/: rti_dl_buildid_c.h  rti_dl_buildid_cpp.h  rti_dl_c.h  rti_dl_c_impl.h  rti_dl_cpp.h  rti_dl_dll_c.h  rti_dl_dll_cpp.h  rti_dl_version_c.h  rti_dl_version_cpp.h  rti_dl_xml_c.h
x64Win64VS2017/lib/: dds_interface.lib  dds_interface_debug.lib
(+1178 files in other folders)
